<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XXX养老院</string>
    <string name="hello_world">Hello，世界!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="footer_message">消息</string>
    <string name="footer_post">发表</string>
    <string name="footer_image">图片</string>
    <string name="footer_notify">提醒</string>
    <string name="footer_personal">我的</string>
    <string name="server_address">http://182.92.193.33:8000</string>
    <string name="title_activity_profile">我的信息</string>
    <string name="name">姓名</string>
    <string name="phone_number">电话</string>
    <string name="age">年龄</string>
    <string name="title_activity_post">发表</string>
    <string name="title_activity_alert">提醒</string>
    <string name="message_article">动态</string>
    <string name="message_alert">报警</string>
    <string name="message_notification">通知</string>
    <string name="message_type_article">ARTICLE</string>
    <string name="message_type_alert">ALERT</string>
    <string name="message_type_notification">NOTIFICATION</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="connect_error">服务器连接不正常</string>
    <string name="date_server_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_client_format">yyyy-MM-dd HH:mm</string>
    <string name="loading_message">加载中...</string>
    <string name="title_activity_main_frame">MainFrameActivity</string>

</resources>
