<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="100dp"
    android:layout_gravity="center_horizontal|top"
    android:gravity="center|center_horizontal"
    android:orientation="horizontal"
    android:padding="10pt"
    android:theme="@style/footer">

    <TextView
        android:id="@+id/message"
        style="@style/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/footer_message" />

    <TextView
        android:id="@+id/post"
        style="@style/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/footer_post" />

    <TextView
        android:id="@+id/notify"
        style="@style/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/footer_notify" />

    <TextView
        android:id="@+id/personal"
        style="@style/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/footer_personal" />

</LinearLayout>