<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.swt.geracomium.FooterFragment">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center|center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:layout_weight="1"
            android:text="@string/footer_message"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/post"
            android:layout_weight="1"
            android:text="@string/footer_post"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notify"
            android:layout_weight="1"
            android:text="@string/footer_notify"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal"
            android:layout_weight="1"
            android:text="@string/footer_personal"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</FrameLayout>
