<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swt.geracomium.ProfileFragment"
    android:id="@+id/profile"
    tools:ignore="MergeRootFrame">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:id="@+id/name"
            style="@style/article_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phone_number"
            android:id="@+id/phone_number"
            style="@style/article_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/age"
            android:id="@+id/age"
            style="@style/article_content"/>

    </LinearLayout>

</FrameLayout>
