<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    tools:ignore="MergeRootFrame"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:id="@+id/name"
            style="@style/article_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phone_number"
            android:id="@+id/phone_number"
            style="@style/article_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/age"
            android:id="@+id/age"
            style="@style/article_content"/>

        </LinearLayout>


    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/footer"
        android:layout_gravity="center_horizontal|bottom" />


</FrameLayout>
